Concepts/CI-CD/K8_Kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80                # Serviceport
      targetPort: 8080        # Container port
